Ajout du fichier JAR pour le rendu livrable 1